config_setting(
	name = "have_cuda",
	values = {
		"define": "using_cuda=true"
	}
)

config_setting(
	name = "have_cuda_sm80",
	values = {
		"define": "enable_sm80=true"
	}
)

config_setting(
	name = "have_mps",
	values = {
		"define": "enable_mps=true"
	}
)

config_setting(
	name = "arm_build",
	values = {
		"cpu": "arm"
	}
)

config_setting(
	name = "x86_build",
	values = {
		"cpu": "x86"
	}
)
